<resources>
    <string name="app_name">13033</string>

    <!--Hints-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_sms">SMS</string>
    <string name="prompt_code">Code</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_delete">Are you sure you want to delete this transport reason?</string>
    <string name="prompt_add">Add a new transport reason</string>
    <string name="prompt_edit">Edit transport reason</string>

    <!--Dialogs-->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Buttons-->
    <string name="action_login">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_send">SEND SMS</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!--Validation-->
    <string name="email_validation_error">A valid email is required!</string>
    <string name="password_validation_error">Password is required!</string>
    <string name="full_name_validation_error">Full name is required!</string>
    <string name="address_validation_error">Address is required!</string>
    <string name="transport_code_validation_error">A transport reason is required!</string>

    <!--Messages-->
    <string name="successful_user_creation">User created successfully!</string>
    <string name="SMS_sent">SMS sent!</string>
    <string name="SMS">%1$s %2$s %3$s</string>
    <string name="transport_code_description">%1$S\t%2$s</string>
</resources>